--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -115,7 +115,7 @@
           {% if user.is_authenticated %}
           <span><img style="width: 30px;" src="{% static 'image/user.png' %}" alt="" /></span>
           {% else%}
-          <span id="logintrue"><img style="width: 30px;" src="{% static 'image/search.png' %}" alt="" /></span>
+          <span id="logintrue"><img style="width: 30px;" src="{% static 'image/search.svg' %}" alt="" /></span>
           {% endif%}
         </li>
       </ul>
