--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
+          <form  class="sign-in-form">
             <h2 class="title">Sign in</h2>
             <span id="nameerlogin"></span>
             <span id="nameerlogin2"></span>
@@ -115,7 +115,6 @@
         </div>
       </div>
     </div>
-
     <script src="{% static 'js/login.js' %}"></script>
   </body>
 </html>
