--- a/products/templates/productDetails.html
+++ b/products/templates/productDetails.html
@@ -34,81 +34,41 @@
         </div>
         <li><a href="{% url 'products:feed' %}">Home</a></li>
         <li><a href="{% url 'products:allproduct' %}">Products</a></li>
-        <li>
-          <a href="" class="desktop-item">Shop</i></span></a>
-          <!-- <input type="checkbox" id="showMega" /> -->
-          <label for="showMega" class="mobile-item">Shop </label>
-          <!-- <div class="mega-box">
-            <div class="content">
-              <div class="row">
-                <img src="./image/nav.png" alt="" />
-              </div>
-              <div class="row">
-                <header>Shop Layout</header>
-                <ul class="mega-links">
-                  <li><a href="#">Shop With Background</a></li>
-                  <li><a href="#">Shop Mini Categories</a></li>
-                  <li><a href="#">Shop Only Categories</a></li>
-                  <li><a href="#">Shop Icon Categories</a></li>
-                </ul>
-              </div>
-              <div class="row">
-                <header>Filter Layout</header>
-                <ul class="mega-links">
-                  <li><a href="#">Sidebar</a></li>
-                  <li><a href="#">Filter Default</a></li>
-                  <li><a href="#">Filter Drawer</a></li>
-                  <li><a href="#">Filter Dropdown</a></li>
-                </ul>
-              </div>
-              <div class="row">
-                <header>Product Layout</header>
-                <ul class="mega-links">
-                  <li><a href="#">Layout Zoom</a></li>
-                  <li><a href="#">Layout Sticky</a></li>
-                  <li><a href="#">Layout Sticky 2</a></li>
-                  <li><a href="#">Layout Scroll</a></li>
-                </ul>
-              </div>
-            </div>
-          </div> -->
-        </li>
+        
         <li><a href="">Blog</a></li>
-        <li>
-          <a href="" class="desktop-item">Vendors <span><i class="fas fa-chevron-down"></i></span></a>
-          <input type="checkbox" id="showdrop1" />
-          <label for="showdrop1" class="mobile-item">Vendors <span><i class="fas fa-chevron-down"></i></span></label>
-          <ul class="drop-menu1">
-            <li><a href="">Vendor Store listings</a></li>
-            <li><a href="">Store Details</a></li>
-          </ul>
-        </li>
+       
 
         <li>
-          <a href="" class="desktop-item">Page <span><i class="fas fa-chevron-down"></i></span></a>
-          <input type="checkbox" id="showdrop2" />
-          <label for="showdrop2" class="mobile-item">Page <span><i class="fas fa-chevron-down"></i></span></label>
-          <ul class="drop-menu2">
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Faq</a></li>
-            <li><a href="">Page 404</a></li>
+          <a class="desktop-item">{% if user.is_authenticated %}
+            <span>User Info</span>
+              <ul class="drop-menu2">
+            <li><a href="">Profile</a></li>
+            <li><a href="{% url 'products:history' %}">Shopping History</a></li>
+            <li><a href="{% url 'users:update' %}">Update Profile</a></li>
+            <li><a href="{% url 'users:logout' %}">Logout</a></li>
           </ul>
+            {% else%}
+            <span id="logintrue">User Info</span>
+            <ul class="drop-menu2">
+              <li><a href="{% url 'users:loginuser' %}">Login and Register</a></li>
+            </ul>
+            {% endif%} <span><i class="fas fa-chevron-down"></i></span></a>
+      
+        
         </li>
         <!-- icons -->
         <li class="icons">
           <a href="{% url 'products:cart' %}">
             <span>
-            <img  src="{% static 'image/shoppingBag.svg' %}" alt="" />
-            <small class="count d-flex" id="productcount">0</small>
+            <img src="{% static 'image/shoppingBag.svg' %}" alt="" />
+            <small class="count d-flex">0</small>
           </span>
           </a>
-          <span><a href="{% url 'products:allproduct' %}"><img src="{% static 'image/search.svg' %}" alt="" /></a></span>
           {% if user.is_authenticated %}
+          <span><img style="width: 30px; border-radius: 50%;" src="{{ user.photo.url }}" alt="" /></span>
+          {% else %}
           <span><img style="width: 30px;" src="{% static 'image/user.png' %}" alt="" /></span>
-          {% else%}
-          <span id="logintrue"><img style="width: 30px;" src="{% static 'image/search.png' %}" alt="" /></span>
-          {% endif%}
+          {% endif %}
         </li>
       </ul>
       <label for="" class="btn open-btn"><i class="fas fa-bars"></i></label>
